Add VSCode settings for SvelteKit project

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-	"window.title": "📙 Top Sveltekit Posgres - ${activeEditorShort}",
+	"window.title": "📙 Top Sveltekit - ${activeEditorShort}",
 	"eslint.workingDirectories": [
 		{
 			"mode": "auto"
