migrated the application from pg to postgres.js while maintaining a clean separation of concerns

--- a/postgres/package.json
+++ b/postgres/package.json
@@ -25,6 +25,8 @@
     "@tailwindcss/typography": "^0.5.15",
     "@types/bcryptjs": "^2.4.6",
     "@types/eslint": "^9.6.1",
+    "@types/node-pg-migrate": "^2.3.1",
+    "@types/pg": "^8.11.10",
     "@typescript-eslint/eslint-plugin": "^8.16.0",
     "@typescript-eslint/parser": "^8.16.0",
     "@vcarl/remark-headings": "^0.1.0",
@@ -75,6 +77,7 @@
     "node-html-parser": "^6.1.13",
     "node-pg-migrate": "^7.8.0",
     "pg": "^8.13.1",
+    "postgres": "^3.4.5",
     "sortablejs": "^1.15.6",
     "svelte-french-toast": "^1.2.0",
     "svelte-persisted-store": "^0.12.0",
