Refactor database migration and schema management; remove old SQL files and add new migration scripts for Drizzle ORM

--- a/postgres/package.json
+++ b/postgres/package.json
@@ -6,8 +6,11 @@
     "dev": "vite dev",
     "build": "vite build",
     "preview": "vite preview",
-    "migrate": "bun -r dotenv/config node-pg-migrate --dotenv-path=.env.local",
-    "migrate:production": "node-pg-migrate",
+    "db:generate": "drizzle-kit generate",
+    "db:push": "drizzle-kit push",
+    "db:studio": "drizzle-kit studio",
+    "db:migrate": "bun run src/lib/db/migrate.ts",
+    "db:reset": "bun run src/lib/db/reset.ts && bun run db:migrate",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
     "lint": "prettier --check . && eslint .",
@@ -63,18 +66,22 @@
   },
   "type": "module",
   "dependencies": {
-    "@auth/pg-adapter": "^1.7.4",
+    "@auth/drizzle-adapter": "^1.7.4",
     "@auth/sveltekit": "^1.7.4",
     "@google/generative-ai": "^0.21.0",
     "@types/bcrypt": "^5.0.2",
+    "@types/pg": "^8.11.10",
     "@types/sortablejs": "^1.15.8",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
+    "drizzle-kit": "^0.30.2",
+    "drizzle-orm": "^0.38.4",
     "node-html-parser": "^6.1.13",
-    "node-pg-migrate": "^7.8.0",
     "pg": "^8.13.1",
+    "pg-native": "^3.2.0",
+    "postgres": "^3.4.5",
     "sortablejs": "^1.15.6",
     "svelte-french-toast": "^1.2.0",
     "svelte-persisted-store": "^0.12.0",
