--- a/postgres/package.json
+++ b/postgres/package.json
@@ -72,6 +72,7 @@
     "@types/sortablejs": "^1.15.8",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "ctw-kit": "^1.0.36",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
     "node-html-parser": "^6.1.13",
