update package.json dependencies and remove unused imports in todoStore

--- a/postgres/package.json
+++ b/postgres/package.json
@@ -61,27 +61,24 @@
     "vite": "^6.0.1",
     "vite-plugin-restart": "^0.4.0",
     "vite-plugin-static-copy": "^2.2.0",
-    "vitest": "^2.1.6"
-  },
-  "type": "module",
-  "dependencies": {
-    "@auth/pg-adapter": "^1.7.4",
-    "@auth/sveltekit": "^1.7.4",
-    "@google/generative-ai": "^0.21.0",
-    "@types/bcrypt": "^5.0.2",
-    "@types/sortablejs": "^1.15.8",
-    "bcrypt": "^5.1.1",
-    "bcryptjs": "^2.4.3",
-    "ctw-kit": "^1.0.36",
-    "date-fns": "^4.1.0",
-    "dotenv": "^16.4.5",
-    "node-html-parser": "^6.1.13",
+    "vitest": "^2.1.6",
     "node-pg-migrate": "^7.8.0",
     "pg": "^8.13.1",
     "postgres": "^3.4.5",
+    "dotenv": "^16.4.5",
+    "@auth/pg-adapter": "^1.7.4",
+    "bcryptjs": "^2.4.3",
+    "@types/bcrypt": "^5.0.2",
+    "@types/sortablejs": "^1.15.8"
+  },
+  "type": "module",
+  "dependencies": {
+    "@auth/sveltekit": "^1.7.4",
+    "ctw-kit": "^1.0.36",
+    "date-fns": "^4.1.0",
+    "node-html-parser": "^6.1.13",
     "sortablejs": "^1.15.6",
     "svelte-french-toast": "^1.2.0",
-    "svelte-persisted-store": "^0.12.0",
     "theme-change": "^2.5.0",
     "vanilla-tilt": "^1.8.1"
   }
