refactor database connection handling and improve layout component for environment info

--- a/postgres/package.json
+++ b/postgres/package.json
@@ -6,8 +6,8 @@
     "dev": "vite dev",
     "build": "vite build",
     "preview": "vite preview",
-    "migrate": "bun -r dotenv/config node-pg-migrate --dotenv-path=.env",
-    "migrate:production": "node-pg-migrate",
+    "migrate": "source .env.local && node-pg-migrate",
+    "migrate:production": "source .env && node-pg-migrate",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
     "lint": "prettier --check . && eslint .",
