update PostgreSQL setup: add Docker support, simplify environment configuration, and enhance seed data

--- a/postgres/_example .env
+++ b/postgres/_example .env
@@ -1,16 +1,14 @@
-# *************************
-#* Production database   *
-# *************************
-DB_HOST=
-DB_PORT=
-DB_USER=
-DB_PASSWORD=
-DB_NAME=
+# Database URL format for docker-compose
 
-DB_SSL=false
-MAX_CLIENTS=20
-IDLE_TIMEOUT_MILLIS=30000
-CONNECTION_TIMEOUT_MILLIS=2000
+# *************************
+#* Database               *
+# *************************
+DB_HOST=localhost
+DB_PORT=5432
+DB_USER=postgres
+DB_PASSWORD=postgres
+DB_NAME=topsveltekit
+
 
 # AUTH
 # DATABASE CONNECTIONS FOR AUTH.JS ADAPTER run with `npx auth secret`
