--- a/postgres/package.json
+++ b/postgres/package.json
@@ -1,20 +1,22 @@
 {
   "name": "top-sveltekit",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "vite dev",
     "build": "vite build",
     "preview": "vite preview",
-    "migrate": "source .env.local && node-pg-migrate",
-    "migrate:production": "source .env && node-pg-migrate",
+    "migrate": "source .env && DATABASE_URL=postgres://$DB_USER:$DB_PASSWORD@$DB_HOST:$DB_PORT/$DB_NAME node-pg-migrate",
+
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
     "lint": "prettier --check . && eslint .",
     "format": "prettier --write .",
-    "postbuild": "vite build --mode preview"
+    "postbuild": "vite build --mode preview",
+    "seed": "source .env && psql $DATABASE_URL -f seed-database/seed.sql"
   },
   "devDependencies": {
+    "@auth/pg-adapter": "^1.7.4",
     "@iconify/json": "^2.2.297",
     "@sveltejs/adapter-node": "^5.2.12",
     "@sveltejs/adapter-vercel": "^5.5.3",
@@ -23,15 +25,19 @@
     "@tailwindcss/container-queries": "^0.1.1",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.16",
+    "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
     "@types/eslint": "^9.6.1",
     "@types/node-pg-migrate": "^2.3.1",
     "@types/pg": "^8.11.10",
+    "@types/sortablejs": "^1.15.8",
     "@typescript-eslint/eslint-plugin": "^8.20.0",
     "@typescript-eslint/parser": "^8.20.0",
     "@vcarl/remark-headings": "^0.1.0",
     "autoprefixer": "^10.4.20",
+    "bcryptjs": "^2.4.3",
     "daisyui": "^4.12.23",
+    "dotenv": "^16.4.7",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-svelte": "^2.46.1",
@@ -40,7 +46,11 @@
     "idb": "^8.0.1",
     "mdsvex": "^0.12.3",
     "mdsvex-relative-images": "^1.0.3",
+    "node-pg-migrate": "^7.9.0",
+    "pg": "^8.13.1",
+    "pg-native": "^3.2.0",
     "postcss": "^8.5.1",
+    "postgres": "^3.4.5",
     "prettier": "^3.4.2",
     "prettier-plugin-svelte": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.10",
@@ -61,15 +71,7 @@
     "vite": "^6.0.7",
     "vite-plugin-restart": "^0.4.2",
     "vite-plugin-static-copy": "^2.2.0",
-    "vitest": "^3.0.2",
-    "node-pg-migrate": "^7.9.0",
-    "pg": "^8.13.1",
-    "postgres": "^3.4.5",
-    "dotenv": "^16.4.7",
-    "@auth/pg-adapter": "^1.7.4",
-    "bcryptjs": "^2.4.3",
-    "@types/bcrypt": "^5.0.2",
-    "@types/sortablejs": "^1.15.8"
+    "vitest": "^3.0.2"
   },
   "type": "module",
   "dependencies": {
@@ -77,8 +79,6 @@
     "ctw-kit": "^1.0.39",
     "date-fns": "^4.1.0",
     "node-html-parser": "^7.0.1",
-    "sortablejs": "^1.15.6",
-    "svelte-french-toast": "^1.2.0",
-    "vanilla-tilt": "^1.8.1"
+    "svelte-french-toast": "^1.2.0"
   }
 }
