add overrides for estree-walker in package.json to ensure compatibility

--- a/postgres/package.json
+++ b/postgres/package.json
@@ -79,5 +79,8 @@
     "date-fns": "^4.1.0",
     "node-html-parser": "^7.0.1",
     "svelte-french-toast": "^1.2.0"
+  },
+  "overrides": {
+    "estree-walker": "^3.0.0"
   }
 }
