--- a/postgres/package.json
+++ b/postgres/package.json
@@ -71,6 +71,7 @@
     "vitest": "^3.0.2",
     "@sveltejs/adapter-vercel": "^5.5.3"
   },
+  "type": "module",
   "dependencies": {
     "@auth/sveltekit": "^1.7.4",
     "ctw-kit": "^1.0.39",
