testing electric with drizzle

--- a/postgres/_example .env
+++ b/postgres/_example .env
@@ -1,5 +1,6 @@
-# Database URL format for docker-compose
+COMPOSE_PROJECT_NAME=topsveltekit
 
+# Database URL format for docker-compose
 # *************************
 #* Database               *
 # *************************
