--- a/postgres/package.json
+++ b/postgres/package.json
@@ -18,11 +18,13 @@
     "@auth/pg-adapter": "^1.7.4",
     "@iconify/json": "^2.2.297",
     "@sveltejs/adapter-node": "^5.2.12",
+    "@sveltejs/adapter-vercel": "^5.5.3",
     "@sveltejs/kit": "^2.16.0",
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
     "@tailwindcss/container-queries": "^0.1.1",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.16",
+    "@tailwindcss/vite": "^4.1.4",
     "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
     "@types/eslint": "^9.6.1",
@@ -32,9 +34,8 @@
     "@typescript-eslint/eslint-plugin": "^8.20.0",
     "@typescript-eslint/parser": "^8.20.0",
     "@vcarl/remark-headings": "^0.1.0",
-    "autoprefixer": "^10.4.20",
     "bcryptjs": "^2.4.3",
-    "daisyui": "^4.12.23",
+    "daisyui": "^5.0.28",
     "dotenv": "^16.4.7",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
@@ -46,11 +47,10 @@
     "mdsvex-relative-images": "^1.0.3",
     "node-pg-migrate": "^7.9.0",
     "pg": "^8.13.1",
-    "postcss": "^8.5.1",
     "postgres": "^3.4.5",
     "prettier": "^3.4.2",
     "prettier-plugin-svelte": "^3.3.3",
-    "prettier-plugin-tailwindcss": "^0.6.10",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-slug": "^6.0.0",
     "remark-external-links": "^9.0.1",
@@ -60,7 +60,7 @@
     "svelte-check": "^4.1.4",
     "svelte-preprocess-import-assets": "^1.1.0",
     "svelte-youtube-embed": "^0.4.4",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^4.1.4",
     "tslib": "^2.8.1",
     "typescript": "^5.7.3",
     "unist-util-visit": "^5.0.0",
@@ -68,8 +68,7 @@
     "vite": "^6.0.7",
     "vite-plugin-restart": "^0.4.2",
     "vite-plugin-static-copy": "^2.2.0",
-    "vitest": "^3.0.2",
-    "@sveltejs/adapter-vercel": "^5.5.3"
+    "vitest": "^3.0.2"
   },
   "type": "module",
   "dependencies": {
