--- a/postgres/package.json
+++ b/postgres/package.json
@@ -16,70 +16,72 @@
     "release": "semantic-release"
   },
   "devDependencies": {
-    "@auth/pg-adapter": "^1.7.4",
-    "@iconify/json": "^2.2.297",
+    "@auth/pg-adapter": "^1.10.0",
+    "@iconify/json": "^2.2.386",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
     "@semantic-release/github": "^11.0.6",
     "@sindresorhus/slugify": "^3.0.0",
-    "@sveltejs/adapter-node": "^5.2.12",
-    "@sveltejs/adapter-vercel": "^5.5.3",
-    "@sveltejs/kit": "^2.16.0",
-    "@sveltejs/vite-plugin-svelte": "^5.0.3",
+    "@sveltejs/adapter-node": "^5.3.2",
+    "@sveltejs/adapter-vercel": "^5.10.2",
+    "@sveltejs/kit": "^2.42.2",
+    "@sveltejs/vite-plugin-svelte": "^6.2.0",
     "@tailwindcss/container-queries": "^0.1.1",
     "@tailwindcss/forms": "^0.5.10",
-    "@tailwindcss/typography": "^0.5.16",
-    "@tailwindcss/vite": "^4.1.4",
-    "@types/bcrypt": "^5.0.2",
+    "@tailwindcss/typography": "^0.5.18",
+    "@tailwindcss/vite": "^4.1.13",
+    "@types/bcrypt": "^6.0.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/eslint": "^9.6.1",
     "@types/node-pg-migrate": "^2.3.1",
-    "@types/pg": "^8.11.10",
+    "@types/pg": "^8.15.5",
     "@types/sortablejs": "^1.15.8",
-    "@typescript-eslint/eslint-plugin": "^8.20.0",
-    "@typescript-eslint/parser": "^8.20.0",
+    "@typescript-eslint/eslint-plugin": "^8.44.0",
+    "@typescript-eslint/parser": "^8.44.0",
     "@vcarl/remark-headings": "^0.1.0",
-    "bcryptjs": "^2.4.3",
-    "daisyui": "^5.0.28",
-    "dotenv": "^16.4.7",
-    "eslint": "^9.18.0",
-    "eslint-config-prettier": "^10.0.1",
-    "eslint-plugin-svelte": "^2.46.1",
-    "fs-extra": "^11.3.0",
-    "glob": "^11.0.1",
-    "idb": "^8.0.1",
-    "mdsvex": "^0.12.3",
-    "mdsvex-relative-images": "^1.0.3",
-    "node-pg-migrate": "^7.9.0",
-    "pg": "^8.13.1",
-    "postgres": "^3.4.5",
-    "prettier": "^3.4.2",
-    "prettier-plugin-svelte": "^3.3.3",
-    "prettier-plugin-tailwindcss": "^0.6.11",
+    "bcryptjs": "^3.0.2",
+    "config": "^4.1.1",
+    "daisyui": "^5.1.13",
+    "dotenv": "^17.2.2",
+    "dotenv-expand": "^12.0.3",
+    "eslint": "^9.36.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-svelte": "^3.12.4",
+    "fs-extra": "^11.3.2",
+    "glob": "^11.0.3",
+    "idb": "^8.0.3",
+    "mdsvex": "^0.12.6",
+    "mdsvex-relative-images": "^2.0.0",
+    "node-pg-migrate": "^8.0.3",
+    "pg": "^8.16.3",
+    "postgres": "^3.4.7",
+    "prettier": "^3.6.2",
+    "prettier-plugin-svelte": "^3.4.0",
+    "prettier-plugin-tailwindcss": "^0.6.14",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-slug": "^6.0.0",
     "remark-external-links": "^9.0.1",
-    "remark-reading-time": "^2.0.1",
+    "remark-reading-time": "^2.0.2",
     "remark-toc": "^9.0.0",
     "semantic-release": "^24.2.9",
-    "svelte": "^5.19.0",
-    "svelte-check": "^4.1.4",
+    "svelte": "^5.39.3",
+    "svelte-check": "^4.3.1",
     "svelte-preprocess-import-assets": "^1.1.0",
-    "svelte-youtube-embed": "^0.4.4",
-    "tailwindcss": "^4.1.4",
+    "svelte-youtube-embed": "^0.4.6",
+    "tailwindcss": "^4.1.13",
     "tslib": "^2.8.1",
-    "typescript": "^5.7.3",
+    "typescript": "^5.9.2",
     "unist-util-visit": "^5.0.0",
-    "unplugin-icons": "^22.0.0",
-    "vite": "^6.0.7",
-    "vite-plugin-restart": "^0.4.2",
-    "vite-plugin-static-copy": "^2.2.0",
-    "vitest": "^3.0.2"
+    "unplugin-icons": "^22.3.0",
+    "vite": "^7.1.6",
+    "vite-plugin-restart": "^1.0.0",
+    "vite-plugin-static-copy": "^3.1.2",
+    "vitest": "^3.2.4"
   },
   "type": "module",
   "dependencies": {
-    "@auth/sveltekit": "^1.7.4",
-    "ctw-kit": "^1.0.39",
+    "@auth/sveltekit": "^1.10.0",
+    "ctw-kit": "^1.0.40",
     "date-fns": "^4.1.0",
     "eruda": "^3.4.3",
     "node-html-parser": "^7.0.1",
